--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -58,6 +58,7 @@ jobs:
           script-name: cli.py
           mode: standalone
           output-dir: output
+          report: true
 
       - name: 📤 Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -65,4 +66,6 @@ jobs:
           name: ${{ runner.os }}-Build
           path: |
             output/**/*
+            **/*.xml
+            build/**/*
           include-hidden-files: true 
