chore(ci): explicitly include dotenv module

--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -59,6 +59,7 @@ jobs:
           mode: standalone
           output-dir: build
           report: true
+          include-module: dotenv
 
       - name: 📤 Upload build artifacts
         uses: actions/upload-artifact@v4
