chore(ci): disable Nuitka cache
perhaps we're dealing with a cache contamination issue...?

--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -53,6 +53,7 @@ jobs:
           output-dir: build
           report: true
           include-module: dotenv
+          disable-cache: true
 
       - name: 📤 Upload build artifacts
         uses: actions/upload-artifact@v4
