chore(ci): try not failing fast
Latest CI run was cancelled due to an undisclosed reason. This might force Github to disclose it.

--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -20,6 +20,7 @@ permissions:
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         os: ${{ fromJSON(inputs.build_os == 'all' && '["macos-latest", "ubuntu-latest", "windows-latest"]' || format('["{0}"]', inputs.build_os)) }}
 
