chore(ci): use nightly numpy
Potentially fixes a crash stemming from Numpy not yet supporting Python 3.13 fully

--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -46,6 +46,11 @@ jobs:
           uv sync --all-groups
           pip install -r requirements.txt
 
+      - name: 📦 Fix Numpy
+        run: |
+          pip uninstall -y numpy
+          pip install --pre --force-reinstall --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple numpy
+
       - name: 🔨 Build executable with Nuitka
         uses: Nuitka/Nuitka-Action@main
         env:
