chore(ci): try using app mode for build
Also re-enable caching, because the Windows build in particular seems to be taking FOREVER.

--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -58,11 +58,11 @@ jobs:
         with:
           nuitka-version: main
           script-name: cli.py
-          mode: standalone
+          mode: app
           output-dir: build
           report: true
           include-module: dotenv
-          disable-cache: true
+          
 
       - name: 📤 Upload build artifacts
         uses: actions/upload-artifact@v4
