fix(ci): remove conflicting parameters
Also fix archival so that not the entire project is archived - I already know why MacOS seems to be seeing folders wrong

--- a/.github/workflows/nuitka.yml
+++ b/.github/workflows/nuitka.yml
@@ -59,7 +59,6 @@ jobs:
           nuitka-version: main
           script-name: cli.py
           mode: app
-          output-dir: build
           report: true
           include-module: dotenv
           
@@ -69,7 +68,5 @@ jobs:
         with:
           name: ${{ runner.os }}-Build
           path: |
-            build/**/*
-            **/*.xml
-            **/*.*
+            build/**
           include-hidden-files: true 
